# retrace-sdk

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/retrace/: __init__.py  config.py  errors.py  recorder.py  replay.py  resume.py  transport.py  utils.py
python/retrace/interceptors/: __init__.py  openai.py
python/src/retrace/: __init__.py  cassette.py  config.py  errors.py  golden.py  init.py  recorder.py  replay.py  resume.py  stream.py  trace.py  traceparent.py  transport.py
python/src/retrace/adapters/: __init__.py  crewai.py  langchain.py
python/src/retrace/interceptors/: __init__.py  _dispatch.py  anthropic.py  gemini.py  openai.py  tool_spans.py
python/tests/: conftest.py  test_adapters.py  test_config.py  test_replay_isolation.py  test_sdk.py  test_server_signal.py  test_span_payload.py
python/tests/integration/: test_flow.py
python/tests/unit/: test_core.py  test_streaming_partial.py
typescript/: LICENSE  README.md  package.json  tsconfig.json  vitest.config.ts
typescript/src/: config.test.ts  config.ts  errors.ts  fork-point.test.ts  golden.ts  index.ts  init.test.ts  init.ts  integration.test.ts  open-span-finalize.test.ts  optional-deps.d.ts  recorder.ts  replay.ts  resume.ts  sdk.test.ts  server-signal.test.ts  stream.ts  trace.ts  traceparent-isolation.test.ts  traceparent.ts  transport.test.ts  transport.ts  unit.test.ts  utils.ts
typescript/src/adapters/: adapters.test.ts  index.ts  langchain.ts  vercel-ai.ts
typescript/src/interceptors/: _dispatch.ts  anthropic.ts  gemini.ts  install.ts  openai.ts  tool-spans.test.ts  tool-spans.ts
